<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".NoteActivity">
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCourses" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/textNoteTitle" app:layout_constraintTop_toBottomOf="@+id/spinnerCourses"
            app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
            app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
            android:layout_marginTop="16dp" android:hint="@string/note_title_hint"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/textNoteText"
            app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
            app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textNoteTitle"
            android:hint="@string/note_text_hint"/>

    <TextView
            android:id="@+id/colorSelectorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_color"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textNoteText"
            app:layout_constraintStart_toStartOf="parent"/>

<!--    <com.talspektor.notekeeper.ColorSelector-->
<!--            android:id="@+id/colorSelector"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/colorSelectorLabel"-->
<!--            app:colors="@array/note_color_array"/>-->

        <com.talspektor.notekeeper.ColorSlider
                android:id="@+id/colorSelector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/colorSelectorLabel"
                app:colors="@array/note_color_array"/>
    </android.support.constraint.ConstraintLayout>