<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_notes"
                android:icon="@drawable/ic_menu_camera"
                android:title="Notes"/>
        <item
                android:id="@+id/nav_courses"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Courses"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
            <item
                    android:id="@+id/nav_how_many"
                    android:icon="@android:drawable/ic_dialog_info"
                    android:title="How many" />
        </menu>
    </item>
    <item
            android:id="@+id/media_route_menu_item"
            android:title="Cast"
            app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
            tools:icon="@drawable/mr_button_light" />

</menu>
